Fixed a couple of issues with Users controller

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 export FACEBOOK_KEY=1146552762036291
 export FACEBOOK_SECRET=dcccfc3092212676bf26342db1572f80
+export AWS_BUCKET=tinstukdevelopment
+export AWS_ACCESS_KEY_ID=AKIAIESBVFST3MJDWC4Q
+export AWS_SECRET_ACCESS_KEY=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
